Added working code for Level2

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
 .label {
-    font-size: 20px;
+    font-size: 15px;
+}
+
+.labelbold {
+    font-weight: bold;
+}
+
+.labelfade {
+    color:Blue; 
 }
