Changed the data set and updated code to reflect that. Updated Readme

--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@
   }
 
   .data_header {
-    background-image: url('images/article-break-business-920115.jpg');
+    background-image: url('images/news.png');
 
     height: 300px;
   }
